--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h2>To-Do List <img id="img-size" src="./images/todo.png" alt="" /></h2>
         <div class="row">
           <input type="text" id="input-box" placeholder="Add To-Do" />
-          <button>Add</button>
+          <button onclick="addTask()">Add</button>
         </div>
         <ul id="list-container">
-          <li class="checked"><span class="r-check"></span> Task 1</li>
+          <!-- <li class="checked"><span class="r-check"></span> Task 1</li>
           <li>Task 2</li>
-          <li>Task 3</li>
-          <li>Task 4</li>
-          <li>Task 5</li>
+          <li>Task 3</li> -->
         </ul>
       </div>
     </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
